--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack --env mode=development",
-    "start": "webpack server --env mode=development",
+    "dev": "webpack server --env mode=development",
     "build:prod": "webpack --env mode=production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.11",
-    "@types/webpack": "^5.28.3",
-    "@types/webpack-dev-server": "^4.7.2",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.2",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
@@ -27,17 +28,23 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^4.15.1",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
+    "@types/webpack": "^5.28.3",
+    "@types/webpack-dev-server": "^4.7.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@svgr/webpack": "^8.1.0",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "fork-ts-checker-webpack-plugin": "^9.0.0",
+    "react-refresh-typescript": "^2.0.9",
+    "webpack-bundle-analyzer": "^4.9.1"
+   },
+   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-refresh-typescript": "^2.0.9",
-    "react-router-dom": "^6.16.0",
-    "webpack-bundle-analyzer": "^4.9.1"
-  }
+    "react-router-dom": "^6.16.0"
+   }
+   
 }
